# cairowindow

./: .gitignore  .gitmodules  Arc.h  BezierCurve.cxx  BezierCurve.h  BezierFitter.cxx  BezierFitter.h  CMakeLists.txt  Circle.h  ClickableIndex.h  Color.cxx  Color.h  Connector.h  CoordinateMapper.h  CoordinateSystem.h  Curve.h  DebugWindow.cxx  DebugWindow.h  Defaults.h  Direction.cxx  Direction.h  Draggable.h  EventLoop.cxx  EventLoop.h  FontPangoContext.cxx  FontPangoContext.h  IntersectRectangle.h  Layer.cxx  Layer.h  LayerArgs.h  LayerRegion.cxx  LayerRegion.h  Line.cxx  Line.h  LinePiece.cxx  LinePiece.h  Matrix.h  Message.cxx  Message.h  MultiRegion.h  (+30 more)
chess/: CMakeLists.txt  Diagram.cxx  Diagram.h  Piece.h  enums.h
chess/lessons/: .gitignore  FENs  lesson-2024-04-11.html  lesson-2024-05-16.html  lesson-2024-05-23.html  lesson-2024-06-06-page1.html  lesson-2024-06-06-page2.html  lesson-2024-06-13-page1.html  lesson-2024-06-13-page2.html  lessons.css
cs/: Arc.h  CS.h  Circle.h  Connector.h  Direction.h  Line.h  LinePiece.h  Matrix.h  NiceDelta.h  Point.h  Range.h  Rectangle.h  Size.h  TransformOperators.h  Vector.h
draw/: Arc.h  ArrowHead.cxx  ArrowHead.h  Axes.cxx  Axes.h  BezierCurve.h  BezierFitter.cxx  BezierFitter.h  ChessDiagram.cxx  ChessDiagram.h  ChessPiece.cxx  ChessPiece.h  Circle.h  Connector.cxx  Connector.h  Curve.cxx  Curve.h  Grid.cxx  Grid.h  Line.cxx  Line.h  LineStyle.h  MultiRegion.h  PlotArea.cxx  PlotArea.h  Point.h  Polyline.h  Rectangle.h  Shape.cxx  Shape.h  ShapePosition.h  Slider.cxx  Slider.h  Text.h
plot/: Arc.h  Circle.h  Connector.h  Line.h  LinePiece.h  Point.h  Rectangle.h
symbolic/: Atan.cxx  Atan.h  BinaryOperator.h  CMakeLists.txt  Constant.cxx  Constant.h  Cos.cxx  Cos.h  Exponential.cxx  Exponential.h  Exponentiation.h  Expression.cxx  Expression.h  Function.h  Hash.h  IdRange.h  Log.cxx  Log.h  Multiplication.h  Negation.h  Power.cxx  Power.h  Precedence.h  Product.cxx  Product.h  Sin.cxx  Sin.h  Sum.cxx  Sum.h  Symbol.cxx  Symbol.h  UnaryOperator.h  add.h  add_equals.h  canonical_constant.h  config.h.in  counter.h  differentiate.h  evaluate.h  exponentiate.h  (+32 more)
symbolic2/: Atan.cxx  Atan.h  BinaryOperator.h  CMakeLists.txt  Constant.cxx  Constant.h  Cos.cxx  Cos.h  Expression.cxx  Expression.h  Hash.h  Log.cxx  Log.h  Power.cxx  Power.h  Precedence.h  Product.cxx  Product.h  Sin.cxx  Sin.h  Sum.cxx  Sum.h  Symbol.cxx  Symbol.h  UnaryOperator.h  config.h.in  symbolic2_testsuite.cxx
tests/: 4d_3d_cat.cxx  4d_3d_cat.m  Algorithm.cxx  Algorithm.h  AlgorithmEvent.cxx  AlgorithmEvent.h  AlgorithmEvent2.cxx  AlgorithmEvent2.h  AlgorithmEventType.h  Approximation.cxx  Approximation.h  CMakeLists.txt  CubicPolynomial.h  EnableDrawing.cxx  EnableDrawing.h  Function.h  Halley_iterations.cxx  History.h  HorizontalDirection.cxx  IEEE754.h  IEEE754_test.cxx  Interval.cxx  Interval.h  KineticEnergy.h  LachanceSchwartz.cxx  LocalExtreme.h  PlotHistory.h  PlotKineticEnergy.h  PlotLocalExtreme.h  PlotParabolaScale.h  PlotSample.h  Polynomial.h  QuadraticPolynomial.h  README.algorithm  README.bezier  README.roots_example  Sample.h  Scale.h  TestFunctionGenerator.hpp  Weight.h  (+44 more)
tests/gradient_descent/: Algorithm.cxx  Algorithm.h  AlgorithmEventType.cxx  AlgorithmEventType.h  Approximation.cxx  Approximation.h  ExtremeType.cxx  ExtremeType.h  History.h  HistoryIndex.h  HorizontalDirection.cxx  HorizontalDirection.h  KineticEnergy.h  LocalExtreme.cxx  LocalExtreme.h  Sample.h  Scale.h  VerticalDirection.cxx  VerticalDirection.h  Weight.h
tests/gradient_descent2/: Algorithm.cxx  Algorithm.h  AlgorithmEventType.cxx  AlgorithmEventType.h  AnalyzedCubic.cxx  AnalyzedCubic.h  CriticalPointType.cxx  CriticalPointType.h  CubicToNextSampleType.cxx  CubicToNextSampleType.h  ExtremeChain.cxx  ExtremeChain.h  ExtremeType.cxx  ExtremeType.h  HorizontalDirection.cxx  HorizontalDirection.h  IterationState.cxx  IterationState.h  KineticEnergy.h  LocalExtreme.cxx  LocalExtreme.h  Sample.cxx  Sample.h  SampleNode.cxx  SampleNode.h  Scale.cxx  Scale.h  ScaleUpdate.cxx  ScaleUpdate.h
